# tauri-dynamic-window-freeze

./: package.json
public/: inputfield.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
